--- a/app.json
+++ b/app.json
@@ -15,44 +15,38 @@
       "description": "Leave this as it is!",
       "value": "ANYTHING"
     },
-    "TG_BOT_TOKEN": {
+    "BOT_TOKEN": {
       "description": "Your bot token from @botfather, as a string."
     },
-    "APP_ID": {
+    "API_ID": {
       "description": "Get this value from https://my.telegram.org"
     },
     "API_HASH": {
       "description": "Get this value from https://my.telegram.org"
     },
     "AUTH_USERS": {
-      "description": "allow only pre-defined users to use this bot"
+      "description": "Create a list of User Ids to use this bot(ADMINS). Seperate by space. At least one required"
     },
-    "TIME_LIMIT": {
-      "description": "Set timeout for subprocess (In seconds)",
-      "value": "0"
-    },
-    "UPDATE_CHANNEL": {
-      "description": "For Force Subscribe. Paste your Update channel USERNAME (without @)..",
-      "value": "0"
-    },
-    "LOG_CHANNEL": {
-      "description": "To get logs",
-      "value": "0"
-    },
-    "SUPPORT_CHAT": {
-      "description": "Public group / channel username of the discussion chat (include - @)",
+    "BROADCAST_AS_COPY": {
+      "description": "Value should be True or False. Broadcast with Forward Tag or as Copy.(Without Forward Tag)",
+      "value": "True",
       "required": false
     },
-    "DEF_WATER_MARK_FILE": {
-      "description": "Set any name(Optional)",
-      "value": "0"
+    "DB_URL": {
+      "description": "MongoDB.com database url",
+      "required": true
     },
-    "DEF_THUMB_NAIL_VID_S": {
-      "description": "default thumbnail to be used in the videos. Incase, youtube-dl is unable to find a thumbnail.",
-      "value": "0"
+    "DB_NAME": {
+      "description": "A database name without white space(example : broadcastbot)",
+      "value": "BroadcastBot",
+      "required": false
     },
-    "SCREENSHOTS": {
-      "description": "To get Screenshots (True/False)",
+    "LOG_CHANNEL": {
+      "description": "ID of a Channel which you want to RECEIVE LOGS.",
+      "required": false
+    }
+    "TIME_LIMIT": {
+      "description": "Set timeout for subprocess (In seconds)",
       "value": "0"
     }
   },
