--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp
 beautifulsoup4
 hachoir
-sqlalchemy==1.3.23
+sqlalchemy==1.3.20
 psycopg2-binary
 numpy
 Pillow
@@ -10,16 +10,8 @@ ffmpeg
 pyrogram
 feedparser
 requests
+tgcrypto
 youtube-dl
-git+git://github.com/Satyamurthi/youtube-dl.git
-git+git://github.com/mongodb/motor
-dnspython
 aiofiles
-pyromod
-psutil
 motor
-datetime
-pymongo
-humanize
-TgCrypto
 dnspython
